fix slide in animation overflow

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 
 body, html {
   height: 100%;
+  width: 100%;
   margin: 0;
   -webkit-user-select:none;
   -webkit-touch-callout:none;
@@ -83,6 +84,10 @@ body {
   margin-top:-5%;
  }
 
+ .card-body {
+  height: 450px;
+}
+
 }
 
 /* iphone x later horizontal */
@@ -96,6 +101,11 @@ body {
 }
 
 /*end hero*/
+
+#about-header, #services, #portfolio, #testimonials, #contact {
+  overflow-x: hidden;
+  width: 100%;
+}
 
 h1 {
   font-size: 1.75rem;
@@ -200,6 +210,10 @@ h5, .card-body {
     height: 80%;
     margin-top: 40px;
     position: relative;
+  }
+
+  .card-body {
+    height: 350px;
   }
 }
 
@@ -457,7 +471,7 @@ h1, h2, h4{
 }
 
 .slideinleft.is-visible {
-animation: slideinleft 1.25s 0s 1 normal forwards;
+animation: slideinleft .8s 0s 1 normal forwards;
 }
 
 .slideinright.is-visible {
@@ -493,7 +507,7 @@ animation: slideinleft 1.25s 0s 1 normal forwards;
 
 @keyframes slideinleft {
   from{
-    margin-left: -140%;
+    margin-left: -120%;
   }
   to {
     margin-left: 0%;
@@ -502,7 +516,7 @@ animation: slideinleft 1.25s 0s 1 normal forwards;
 
 @keyframes slideinright {
   from{
-    margin-right: -140%;
+    margin-right: -120%;
   }
   to {
     margin-right: 0%;
@@ -735,10 +749,6 @@ Shorthand
 .testimonial1 h5,
 .testimonial1 h6 {
   color: #3e4555;
-}
-
-.card-body {
-  height: 320px;
 }
 
 .testimonial1 .bg-light {
